--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<title>Portfolio</title>
 </head>
 <body>
+<div class="container"></div>
 <header>Header</header>
 <h1>Chris's Porfolio</h1>
+</div>
 </body>
 </html>
