--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Chris's Portfolio</title>
+
+    <link rel="stylesheet" href="./css/layout.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<div class="container"></div>
-<header>Header</header>
-<h1>Chris's Porfolio</h1>
-</div>
+    <div class="container">
+        <header class="header">Header</header>
+        <div class="main__left__sidebar">
+            <div class="left__item1">left sidebar 1 20% x a quarter of available height</div>
+            <div class="left__item2">left sidebar 2 20% x a quarter of available height</div>
+            <div class="left__item3">left sidebar 3 20% x a quarter of available height</div>
+            <div class="left__item4">left sidebar 4 20% x a quarter of available height</div>
+        </div>
+        <div class="main__content">
+            <div class="main__content__item--1">main section 1 60% x half of available height </div>
+            <div class="main__content__item--2">main section 2 60% x half of available height</div>
+        </div>
+        <div class="main__right__sidebar">
+            <div class="main__sidebar__item--1">sidebar section 1 20% x 1/3 of available height</div>
+            <div class="main__sidebar__item--2">sidebar section 2 20% x 1/3 of available height</div>
+            <div class="main__sidebar__item--3">sidebar section 3 20% x 1/3 of available height</div>
+        </div>
+        <footer class="footer">Footer</footer>
+    </div>
 </body>
 </html>
