Working on about me section

--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">Header</header>
+        <header class="header">Chris Cooksey</header>
         <div class="main__left__sidebar">
-            <div class="left__item1">left sidebar 1 20% x a quarter of available height</div>
-            <div class="left__item2">left sidebar 2 20% x a quarter of available height</div>
-            <div class="left__item3">left sidebar 3 20% x a quarter of available height</div>
-            <div class="left__item4">left sidebar 4 20% x a quarter of available height</div>
+            <section class="left_item1">
+            	<h2 class="about-me">About Chris</h2>
+				<p class="linkedin">LinkedIn: <a href="https://www.linkedin.com/in/chris-cooksey">Chris Cooksey</a></p>
+				</section>
+            <div class="left__item2">Skills</div>
         </div>
         <div class="main__content">
-            <div class="main__content__item--1">main section 1 60% x half of available height </div>
-            <div class="main__content__item--2">main section 2 60% x half of available height</div>
+            <div class="main__content__item--1"></div>
+            <div class="main__content__item--2"></div>
         </div>
         <div class="main__right__sidebar">
-            <div class="main__sidebar__item--1">sidebar section 1 20% x 1/3 of available height</div>
-            <div class="main__sidebar__item--2">sidebar section 2 20% x 1/3 of available height</div>
-            <div class="main__sidebar__item--3">sidebar section 3 20% x 1/3 of available height</div>
+            <div class="main__sidebar__item--1">Project 1</div>
+            <div class="main__sidebar__item--2">Project 2</div>
+            <div class="main__sidebar__item--3">Project 3</div>
         </div>
         <footer class="footer">Footer</footer>
     </div>
