Adding skills section

--- a/index.html
+++ b/index.html
@@ -12,12 +12,23 @@
 <body>
     <div class="container">
         <header class="header">Chris Cooksey</header>
-        <div class="main__left__sidebar">
-            <section class="left_item1">
-            	<h2 class="about-me">About Chris</h2>
-				<p class="linkedin">LinkedIn: <a href="https://www.linkedin.com/in/chris-cooksey">Chris Cooksey</a></p>
+        <div class="main_left_sidebar">
+            <section class="bio">
+            	<h2 class="about-me">Bio</h2>
+            	<p class="biography">Chris is an aspiring developer who enjoys programming things that matter. He has been married to his wife, Amy, for 2 years. He has a BA in psychology from The Ohio State University. His interests outside of work include playing soccer and basketball, cooking and grilling, reading, and playing board games.
+				<nav class="linkedin">LinkedIn:<a href="https://www.linkedin.com/in/chris-cooksey">Chris Cooksey</a></nav>
 				</section>
-            <div class="left__item2">Skills</div>
+            <section class="skill">
+            	<h2 class="skills">Skills</h2>
+            	<ul>
+            		<li>OOP</li>
+					<li>Java</li>
+					<li>Spring</li>
+					<li>HTML/CSS</li>
+					<li>TDD</li>
+					<li>OOP</li>
+            	</ul>
+            </section>
         </div>
         <div class="main__content">
             <div class="main__content__item--1"></div>
