--- a/index.html
+++ b/index.html
@@ -54,10 +54,23 @@
             <div class="main__content__item--1"></div>
             <div class="main__content__item--2"></div>
         </div>
+        <section id="projects" class="project-nav">
+<!--             <nav class="nav-bar"> -->
+                <a class="projects-nav" href="#courses">Course Catalogue</a>
+                <i class="divider">|</i>
+                <a class="projects-nav" href="#pet">Virtual Pet Siumulator</a>
+                <i class="divider">|</i>
+                <a class="projects-nav" href="#bank">Banking App</a>
+            <!-- </nav> -->
+        </section>
         <section class="projects">
-            <article class="main__sidebar__item--1">Virtual Pet Shelter</article>
-            <article class="main__sidebar__item--2">Virtual Pets Amok!</article>
-            <article class="main__sidebar__item--3">Bank Account</article>
+            <article id="courses">
+                <p>Sample curriculum of full-stack Java courses</p>
+            </article>
+            <article id="pet">
+                <p>Virtual pet shelter to simulate caring for pets</p>
+            </article> 
+            <article id="bank">Bank Account</article>
         </section>
         <footer class="footer">Footer</footer>
     </div>
