Finished first project

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
             	<h2>Bio</h2>
             	<p class="bio">Chris is an aspiring developer who enjoys programming things that matter. He has been married to his wife, Amy, for 2 years. He has a BA in psychology from The Ohio State University, and is working towards a Software Programming Certificate from the Java-based full-stack sofware development program, We Can Code IT. His interests outside of work include playing soccer and basketball, cooking and grilling, reading, and playing board games.
                 <div class="contact-info">
-    				<nav class="linkedin">LinkedIn:<a href="https://www.linkedin.com/in/chris-cooksey">Chris Cooksey</a></nav>
-                    <nav class="github">GitHub:<a href="https://github.com/Cooksey3">Cooksey3</a></nav>
-                    <nav class="email">Email: chris@cookseys.org</nav> 
+                    <h2>Social media & contact info:</h2>
+    				<nav>LinkedIn: <a href="https://www.linkedin.com/in/chris-cooksey">Chris Cooksey</a></nav>
+                    <nav>GitHub: <a href="https://github.com/Cooksey3">Cooksey3</a></nav>
+                    <nav>Email: chris@cookseys.org</nav> 
                 </div>
 			</section>
             <section>
@@ -66,11 +67,31 @@
         <section class="projects">
             <article id="courses">
                 <p>Sample curriculum of full-stack Java courses</p>
+                <section class="course-pictures">
+                    <img id="courses" src="resources/courses.jpg" width="60%" height="450";>
+                    <img id="course" src="resources/course.jpg" width="25%" height="450";>
+                </section>
+                <nav class="more-info">More project info can be found at: <a href="https://github.com/Cooksey3/courses">Courses</a></nav>
             </article>
             <article id="pet">
                 <p>Virtual pet shelter to simulate caring for pets</p>
+                <section class="pets-app">
+                    <p class="beginning">Admit cats and dogs to the pet shelter</p>
+                    <img id="pets" src="resources/pets.jpg" width="70%" height="450";>
+                    <p class="pet-interactions">Choose to interact with pets from many options</p>
+                    <img id="pets2" src="resources/pets2.jpg" width="70%" height="450";>
+                </section>
+                <nav class="more-info">More project info can be found at: <a href="https://github.com/Cooksey3/virtual-pets-amok">Virtual Pets Amok!</a></nav>
             </article> 
-            <article id="bank">Bank Account</article>
+            <article id="bank">
+                <p>Bank transactions simulator</p>
+                <section class="course-pictures">
+
+                    <img id="course" src="resources/course.jpg" width="25%" height="450";>
+                </section>
+                <nav class="more-info">More project info can be found at: <a href="https://github.com/Cooksey3/courses">Courses</a></nav>
+
+            </article>
         </section>
         <footer class="footer">Footer</footer>
     </div>
