--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <header id="header" class="header">
-            <h1 id="name">Chris Cooksey</h1>
+            <h1 class="name">Chris Cooksey</h1>
             <nav class="links">
                 <a id="link1" href="#about-me">About Me</a>
                 <i class="divider">|</i>
