CTR-shift F all files

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 <body>
     <div class="container">
         <header id="header" class="header">
-            <h1 class="name">Chris Cooksey</h1>
+<!--             <h1 class="name">Chris Cooksey</h1>
             <nav class="links">
                 <a id="link1" href="#about-me">About Me</a>
                 <i class="divider">|</i>
                 <a id="link2" href="#projects">Projects</a>
             </nav>
-        </header>
+ -->        </header>
             <img id="picture" src="resources/portfolio-picture.jpg">
             <section id="about-me">
-                <h2 class="bio">Bio</h2>
+<!--                 <h2 class="bio">Bio</h2>
                 <p class="bio">Chris is an aspiring developer who enjoys programming things that matter. He has been married to his wife, Amy, for 2 years. He has a BA in psychology from The Ohio State University, and is working towards a Software Programming Certificate from the Java-based full-stack sofware development program, We Can Code IT. His interests outside of work include playing soccer and basketball, cooking and grilling, reading, and playing board games.
                 <div class="contact-info">
                     <h2>Social media & contact info:</h2>
@@ -45,7 +45,7 @@
                     <li class="divider">|</li>
                     <li id="listitem6">Git</li>
             	</ul>
-            </section>
+ -->            </section>
         <section id="projects" class="project-nav">
 <!--             <nav class="nav-bar"> -->
                 <a class="projects-nav" href="#courses">Course Catalogue</a>
