Editing header and social media section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Chris's Portfolio</title>
 
     <link rel="stylesheet" href="./css/layout.css">
@@ -15,45 +16,44 @@
 <body>
     <div class="container">
         <header id="header" class="header">
-<!--             <h1 class="name">Chris Cooksey</h1>
-            <nav class="links">
+            <h1 class="name">Chris Cooksey</h1>
+            <div class="links">
                 <a id="link1" href="#about-me">About Me</a>
-                <i class="divider">|</i>
                 <a id="link2" href="#projects">Projects</a>
-            </nav>
- -->        </header>
-            <img id="picture" src="resources/portfolio-picture.jpg">
-            <section id="about-me">
-<!--                 <h2 class="bio">Bio</h2>
-                <p class="bio">Chris is an aspiring developer who enjoys programming things that matter. He has been married to his wife, Amy, for 2 years. He has a BA in psychology from The Ohio State University, and is working towards a Software Programming Certificate from the Java-based full-stack sofware development program, We Can Code IT. His interests outside of work include playing soccer and basketball, cooking and grilling, reading, and playing board games.
-                <div class="contact-info">
-                    <h2>Social media & contact info:</h2>
-                    <nav>LinkedIn: <a href="https://www.linkedin.com/in/chris-cooksey">Chris Cooksey</a></nav>
-                    <nav>GitHub: <a href="https://github.com/Cooksey3">Cooksey3</a></nav>
-                    <nav>Email: chris@cookseys.org</nav> 
-            	<h2 class="skills">Skills</h2>
-            	<ul class="list-of-skills">
-            		<li id="listitem1">OOP</li>
-                    <li class="divider">|</li>
-					<li id="listitem2">Java</li>
-                    <li class="divider">|</li>
-					<li id="listitem3">Spring</li>
-                    <li class="divider">|</li>
-					<li id="listitem4">HTML/CSS</li>
-                    <li class="divider">|</li>
-					<li id="listitem5">TDD</li>
-                    <li class="divider">|</li>
-                    <li id="listitem6">Git</li>
-            	</ul>
- -->            </section>
+            </div>
+        </header>
+        <img id="picture" src="resources/portfolio-picture.jpg">
+        <section id="about-me">
+            <p class="bio">Chris is an aspiring developer who enjoys programming things that matter. He has been married to his wife, Amy, for 2 years. He has a BA in psychology from The Ohio State University, and is working towards a Software Programming Certificate from the Java-based full-stack sofware development program, We Can Code IT. His interests outside of work include playing soccer and basketball, cooking and grilling, reading, and playing board games.
+        	<div class="skills">Skills</div>
+        	<ul class="list-of-skills">
+        		<li id="listitem1">OOP</li>
+                <li class="divider">|</li>
+				<li id="listitem2">Java</li>
+                <li class="divider">|</li>
+				<li id="listitem3">Spring</li>
+                <li class="divider">|</li>
+				<li id="listitem4">HTML/CSS</li>
+                <li class="divider">|</li>
+				<li id="listitem5">TDD</li>
+                <li class="divider">|</li>
+                <li id="listitem6">Git</li>
+        	</ul>
+            <div class="contact-info">
+                <nav id="linked-in"><a href="https://www.linkedin.com/in/chris-cooksey"><i class="fab fa-linkedin"></i></a></nav>
+                <nav id="github"><a href="https://github.com/Cooksey3"><i class="fab fa-github"></i></a></nav>
+                <nav id="email"><a href="mailto:chris@cookseys.org"><i class="fas fa-envelope"></i></a>
+                </nav>
+            </div>
+        </section>
         <section id="projects" class="project-nav">
-<!--             <nav class="nav-bar"> -->
+            <nav class="nav-bar">
                 <a class="projects-nav" href="#courses">Course Catalogue</a>
                 <i class="divider">|</i>
                 <a class="projects-nav" href="#pet">Virtual Pet Siumulator</a>
                 <i class="divider">|</i>
                 <a class="projects-nav" href="#bank">Banking App</a>
-            <!-- </nav> -->
+            </nav>
         </section>
         <section class="projects">
             <article id="courses">
