Made extensive renovations

--- a/index.html
+++ b/index.html
@@ -22,31 +22,34 @@
                 <a id="link2" href="#projects">Projects</a>
             </div>
         </header>
-        <img id="picture" src="resources/portfolio-picture.jpg">
         <section id="about-me">
-            <p class="bio">Chris is an aspiring developer who enjoys programming things that matter. He has been married to his wife, Amy, for 2 years. He has a BA in psychology from The Ohio State University, and is working towards a Software Programming Certificate from the Java-based full-stack sofware development program, We Can Code IT. His interests outside of work include playing soccer and basketball, cooking and grilling, reading, and playing board games.
-        	<div class="skills">Skills</div>
-        	<ul class="list-of-skills">
-        		<li id="listitem1">OOP</li>
-                <li class="divider">|</li>
-				<li id="listitem2">Java</li>
-                <li class="divider">|</li>
-				<li id="listitem3">Spring</li>
-                <li class="divider">|</li>
-				<li id="listitem4">HTML/CSS</li>
-                <li class="divider">|</li>
-				<li id="listitem5">TDD</li>
-                <li class="divider">|</li>
-                <li id="listitem6">Git</li>
-        	</ul>
-            <div class="contact-info">
-                <nav id="linked-in"><a href="https://www.linkedin.com/in/chris-cooksey"><i class="fab fa-linkedin"></i></a></nav>
-                <nav id="github"><a href="https://github.com/Cooksey3"><i class="fab fa-github"></i></a></nav>
-                <nav id="email"><a href="mailto:chris@cookseys.org"><i class="fas fa-envelope"></i></a>
-                </nav>
-            </div>
+            <!-- <p class="bio">Chris is an aspiring developer who enjoys programming things that matter. He has been married to his wife, Amy, for 2 years. He has a BA in psychology from The Ohio State University, and is working towards a Software Programming Certificate from the Java-based full-stack sofware development program, We Can Code IT. His interests outside of work include playing soccer and basketball, cooking and grilling, reading, and playing board games. -->
+            <img id="picture" src="resources/adirondacks.jpg">
+                <ul class="back-end">Back end:
+                    <li class="items" id="listitem1">Java</li>
+                    <li class="items" id="listitem2">OOP</li>
+                    <li class="items" id="listitem3">Spring MVC</li>
+                    <li class="items" id="listitem4">SQL</li>
+                    <li class="items" id="listitem5">TDD</li>
+                </ul>
+            	<ul class="front-end">Front end:
+                    <li class="items" id="listitem6">HTML5</li>
+                    <li class="items" id="listitem7">CSS3</li>
+                    <li class="items" id="listitem8">TDD</li>
+                    <li class="items" id="listitem9">Flexbox</li>
+                    <li class="items" id="listitem10">jQuery</li>
+            	</ul>
+                <ul class="front-end">Other:
+                    <li class="items" id="listitem1">Java</li>
+                    <li class="items" id="listitem2">OOP</li>
+                    <li class="items" id="listitem3">Spring</li>
+                    <li class="items" id="listitem4">HTML5</li>
+                    <li class="items" id="listitem5">CSS3</li>
+                    <li class="items" id="listitem6">TDD</li>
+                    <li class="items" id="listitem7">Git</li>
+                </ul>
         </section>
-        <section id="projects" class="project-nav">
+<!--         <section id="projects" class="project-nav">
             <nav class="nav-bar">
                 <a class="projects-nav" href="#courses">Course Catalogue</a>
                 <i class="divider">|</i>
@@ -55,7 +58,7 @@
                 <a class="projects-nav" href="#bank">Banking App</a>
             </nav>
         </section>
-        <section class="projects">
+ --><!--         <section class="projects">
             <article id="courses">
                 <h2>Sample curriculum of full-stack Java courses</h2>
                 <section class="course-pictures">
@@ -86,8 +89,13 @@
                 <p class="skills-used">Skills used: TDD, OOP, Java</p>
             </article>
         </section>
-        <footer class="footer">
+ -->    <footer class="footer">
             <a id="header-link" href="#header">Back to top</a>
+            <div class="contact-info">
+                <nav id="linkedIn"><a href="https://www.linkedin.com/in/chris-cooksey"><i class="fab fa-linkedin" style="color: #0073b1"></i></a></nav>
+                <nav id="github"><a href="https://github.com/Cooksey3"><i class="fab fa-github" style="color: white"></i></a></nav>
+                <nav id="email"><a href="mailto:chris@cookseys.org"><i class="far fa-envelope" style="color: red"></i></a></nav>
+            </div>
         </footer>
     </div>
 </body>
